--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,15 @@
       <artifactId>rest-assured</artifactId>
       <scope>test</scope>
     </dependency>
+
+<!--    Internal dependencies    -->
+
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>19.0</version>
+    </dependency>
+
   </dependencies>
   <build>
     <plugins>
